v0.0.2 (Unreleased)
-Automatic model binding (plain/text, application/x-www-form-urlencoded, application/json, text/html, text/xml)
-Config::BASE_PATH can now have trailing slash
-Added XMLView
-Added XMLUtils
-Added XMLMapper
-Changed how the 'mapping' field is structured -- it now may contain a 'methods' 
and/or 'fields' key. These should both be arrays, where the keys are the names of the 
corresponding field/method and the values correspond to a RequestMapping and FieldMapping, respecively.
-Added constructor and field-based dependency injection.

v0.0.1 (07/14/2013)
-Initial Version
-Ability to map methods to certain paths and request methods
-Wildcard mappings (* and **)
-Automatic injection of dependencies in controller methods
-JsonView: Will render response as JSON
-BasicView: Will render response as plaintext
-PageView: Will serve a static HTML page, currently (have plans to add in taglib functionality, but that's not even close to in place)