@@ -8,6 +8,9 @@ v0.0.2 (Unreleased)
 and/or 'fields' key. These should both be arrays, where the keys are the names of the 
 corresponding field/method and the values correspond to a RequestMapping and FieldMapping, respecively.
 -Added constructor and field-based dependency injection.
+-adding prepareResponse(HttpResponse) to the View interface -- this will be called before render().
+-Improved XmlUtils::toXml -- the proper structure is now maintained
+-added MappingUtils::getObjectVars() to get all object vars, including private and protected.
 
 v0.0.1 (07/14/2013)
 -Initial Version
